--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "html-validate": "^8.3.0",
     "mkdirp": "^3.0.1",
     "npm-run-all": "^4.1.5",
+    "onchange": "^7.1.0",
     "postcss": "^8.2.6",
     "postcss-cli": "^8.3.1",
     "sass": "^1.66.1"
